# proyecto-final---te03---202301-pf0520231-grupo5-mondongofrito

./: .gitignore  CMakeLists.txt  COMPILINGSETUP.md  LICENSE  README.md  READMEASWELLPLEASE.md  data.txt  imageloading.cpp  imageloading.h  main.cpp  makefile  matrix.h  matriz_vectores.cpp  matriz_vectores.h  menu.h  structure.h
NN/: init.h  neuralnet.cpp  neuralnet.h
mnist/: data.txt
src/: imageloading.cpp  imageloading.h  matrix.h  menu.cpp  menu.h  structure.h
